# just_another_rat

./: README.md  pyproject.toml
just_another_rat/: __main__.py  config.py  locale_.py
just_another_rat/bot/: __init__.py  _bot.py  _dispatcher.py
just_another_rat/handlers/: __init__.py  _cd.py  _dir.py  _download.py  _execute.py  _help.py  _screenshot.py  _start.py  _terminal.py  _upload.py
just_another_rat/states/: __init__.py  _terminal.py  _upload.py
