[tool.poetry]
name = "just-another-rat"
version = "0.1.0"
description = ""
authors = ["Олег <shuwiku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
loguru = "^0.7.3"
mss = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
